--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Era-uma-vez_69239
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69239-h/images/era_cover.jpg
 creator:
   author:
     agent_name: Almeida, Júlia Lopes de
@@ -16,6 +19,8 @@ creator:
     - https://en.wikipedia.org/wiki/J%C3%BAlia_Lopes_de_Almeida
     - https://pt.wikipedia.org/wiki/J%C3%BAlia_Lopes_de_Almeida
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69239#Era-uma-vez
 gutenberg_issued: '2022-10-26'
 identifiers:
   gutenberg: '69239'
